Implemented prices endpoint
